# aiterm

./: .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  LICENSE  MANUAL.md  README.md  TODO.md  pyproject.toml  requirements.txt  ruff.toml
docs/: CONTRIBUTING.md  MANUAL.md  TODO.md  USAGE.md
src/aiterm/: __main__.py  aiterm.py  api_client.py  bootstrap.py  chat_ui.py  cli.py  commands.py  config.py  engine.py  handlers.py  logger.py  personas.py  prompts.py  review.py  session_state.py  settings.py  theme_manager.py  workflows.py
src/aiterm/docs_src/: assistant_docs.md
src/aiterm/managers/: __init__.py  context_manager.py  multichat_manager.py  session_manager.py
src/aiterm/themes/: blue.json  blue_dark.json  default.json  default_dark.json  green.json  green_dark.json  indigo.json  indigo_dark.json  orange.json  orange_dark.json  red.json  red_dark.json  solarized.json  solarized_dark.json  violet.json  violet_dark.json  yellow.json  yellow_dark.json
src/aiterm/utils/: __init__.py  config_loader.py  file_processor.py  (+4 more)
tests/: conftest.py  test_api_client.py  test_bootstrap.py  test_chat_ui.py  test_cli_entrypoint.py  test_commands.py  test_engine.py  test_handlers.py  test_logger.py  test_personas.py  test_prompts.py  test_review.py  test_settings.py  test_theme_manager.py  test_workflows.py
tests/managers/: test_context_manager.py  test_context_managers.py  test_multichat_manager.py  test_session_manager.py
tests/utils/: test_config_loader.py  test_file_processor.py  test_formatters.py  test_message_builder.py  test_redaction.py  test_ui_helpers.py
